+ Show date, time for transfer.
+ Add "Loaded by..." to BOL.
+ Fix shipment number count.
+ Sorty by "Progress, Ready, Shipped" and Last Modified.
+ Allow to specifiy Shipment Window Date (is it on sale or shipment)?
- Allow to search by window.
- Allow to search/filter by Season
- Allow to upload documents.
Customer:
+ Allow to enter Special Notes (for shipment).
- Payment terms as dropdown.
- Reorganize screen layout (Generic info, Billing info, Shipping info).
Item screen:
+ Reorganize screen layout.
+ Show Stock, Sold, Scheduled, Produced and Shipped (including link to details).
- Allow to enter upc for item (manually entered)
- Allow to enter upc for case (manually entered)
Sale:
+ Reorganize screen layout.
+ Show units sold for each item (including link to details).
+ Show units on stock for each item 
+ Allow to pick Pay Terms (Same as shipment Ship Terms).
+ Remove FOB.
+ Allow to transfer units from different sale.
- Set pay terms when Customer is set.
Item:
+ Pallet weight = 60 by default.
- Allow to search/filter by Season
- Validate brand and category.
Purchase:
+ Allow to receive multiple components per purchase (enter only units received).
+ Allow to modify receiving number, container number and invoice number for receiving.
- Sort by last mofied
Receiving:
- Sort by last modified
Global:
- Email notifications based on certain actions.
Production Line:
+ Fix production line
- Allow to finish production even if the units produced are short.














Backlog functionality:
Production:
- Show box with large percentage (On target/slow (based on hours scheduled and units), %Performance/Efficiency, %Production done).
Shipment:
- Persist filter search or show shipment in popup.
Global:
- Keep search options persisted (until page refreshed or logged out).

Backlog tech-dead:
Component entity:
	persist unitsInOrder
	change all int to Long
Item entity:
	remove eager loding
	chage all int to Long
	persist unitsOnStack
Purchase entity:
	persist isReceived