@@ -2,3 +2,5 @@ alter table shipment add column shipping_from date;
 
 alter table shipment add column shipping_to date;
 
+alter table customer add column vendor varchar(20);
+
